# invisigoth

./: README.md  architecture.md  config.yaml  config.yaml.example  main.py  pyproject.toml  pyproject.toml.bak  requirements.txt  run.sh  venv-setup.sh
core/: executor.py  generator.py  llm.py  metrics.py  planner.py
core/providers/: mock.py  openrouter.py
invisigoth/: __init__.py  main.py  main.py.bak
invisigoth/core/: __init__.py  autocommiter.py  context_builder.py  engine.py  executor.py  generator.py  history.py  llm.py
memory/: master_prompt.txt  pending_goals.json
tests/: test_engine.py  test_engine.py.bak
webui/: dashboard.py
